=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=over


=item *

Fixed broken --republish_only flag in bin/krang_publish. [Peter]

=item *

Changed the default of Krang::ElementClass::Date so that dates are updated 
when the default() method is called and not when new() is called.


=item *

Made Krang::Sotry::find(published=>1) work with stories that had a published 
version of 1/0 instead of NOT NULL / NULL.

=item *

Fixed Krang::XML::Writer to allow raw tabs in XML without Base64
encoding. [Sam]

=item *

Added a workaround for a very strange seg-fault bug.  [Sam]

=item *

Fixed bug where aftrer upgrading to v1.018 old users don't show up in
the User Admin list screen. [Sam]

=item *

Changed Krang::Site so that only the site's URL is required to be
unique.  Requiring all four fields to be unique, while seemingly
sensible, causes numerous problems during data imports.  If necessary
we could add these checks back in at the UI level in Krang::CGI::Site.
[Sam]

=item *

Fixed a bug in Krang::Contrib's full_name() that would add ", " to the
end of the name when the contributor had an empty suffix. [Sam]

=item *

Fixed a bug in Krang::Publisher where no file would be written if the
story's output contained only whitespace or was empty. [Sam]

=item *

Bugfix related to the publish changes made in 1.017 - assets linked to
a story being previewed from an edit interface are now marked
properly.  Media objects are now marked properly when previewed. [Peter]

=item *

Replaced Archive::Tar in Krag::DataSet->new with the system 'tar' for a 50x 
speedup in untaring. [Rudy]

=item *

Removed code from Krang::Contrib that disallowed stories with existing
historical contrib-contrib_type pairs to preview/publish. [Matt]

=back

=head2 v1.018 - May 10, 2004

=over

=item *

Fixed permissions error during upgrade backup creation. [Sam]

=item *

Fixed bug where permissions were not being applied to the Find Link